Fix header image not loading Also make title readable

--- a/src/styles/ai-security.css
+++ b/src/styles/ai-security.css
@@ -2,5 +2,9 @@
     --page-background-color: #BFDFFF;
     --sidebar-background-color: #9CC1E2;
     --standout-background-color: #59ACFF;
-    --header-background-image: url("resources/images/ai-image.jpg");
+    --header-background-image: url("../resources/images/ai-image.jpg");
+}
+
+h1 {
+    color: white;
 }
